More book1 formatting clean up. Also reduced margins after examining test signature printouts

--- a/4T/ch10.tex
+++ b/4T/ch10.tex
@@ -16,14 +16,7 @@ THE TANK.  Trauma!  Death!  Goo!  Anguish!   Yay!!!!!
 As always, please fill in the gaps and correct errors.  Also you should always feel free to add/correct the perspective of your character.
 
 
-
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE SAC-09 } 
+\jumpHeadline{ SAC-09 } 
 
 
 
@@ -179,8 +172,7 @@ I think they know.  I get the sense they've been through some serious trauma the
 
 
 
- {\LARGE THE TANK } 
-\jumpHeadline{THE TANK: Oliver }
+\sceneHeadline{THE TANK: Oliver }
 
 \textit{{[}Trace: 4 Threat Tokens enter the pool{]}}
 
@@ -305,7 +297,7 @@ Oliver sees that Ogleby has a sniper rifle (or something that looks like one).  
 \textit{\textbf{{[}6 tokens left on Solid for Oliver{]}}}
 
 
-\jumpHeadline{\hl{THE TANK: Hayley} }\footnote{\textbf{q.google }Saving Hayley's Tank writeup for last is \_exactly\_ the right order to experience the Tank! \textsubscript{12/07/12 10:33am}}
+\sceneHeadline{\hl{THE TANK: Hayley} }\footnote{\textbf{q.google }Saving Hayley's Tank writeup for last is \_exactly\_ the right order to experience the Tank! \textsubscript{12/07/12 10:33am}}
 
 Hayley's prep goes much faster.  She eagerly assists Swan in prepping herself for the Tank.  She doesn't get asked questions like Oliver did.  Dr. Gerhauser just does some basic checks before they knock Hayley out and put her in the tank.
 
@@ -482,11 +474,7 @@ It's not that, because you've seen what she does when she thinks she hasn't foll
 This upsets Hayley greatly and her knuckles turn white as she grips the edge of the gurney.  Dr. Gerhauser stops questioning Hayley and says that perhaps she should rest now.  Hayley is very agitated and pleads to see Constable Langdon.  She just needs to see that he's okay.  Dr. Gerhauser leads Hayley to the room where Oliver is sleeping peacefully.  Hayley watches him breathe for a few seconds and listens to the machines softly beeping.  Much of her previous tension drains away.  She thanks Dr. Gerhauser and seems much calmer as she settles into her Medbay room. 
 
 
-
- {\LARGE SAC-09 } 
-
-
-\jumpHeadline{Oliver \& Dr. Gerhauser }
+\sceneHeadline{Oliver \& Dr. Gerhauser }
 
 Oliver wakes up in Medbay.  He can see a figure sitting next to a lamp.  He has a splitting headache.
 
@@ -558,10 +546,10 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{Challenges \& Refreshes } 
 
-
-
+{
+\parskip=0pt
 \begin{itemize}
 \item Challenge: Notice 1.  Focused 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
 \item Challenge: Notice ``You've been here before'' 2.  Veteran 2 → Matched
@@ -621,10 +609,10 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 \item Challenge: Stop being choked 4 → Sent back to pool
 \item Challenge: Notice 2. Gorgeous 3 (Hayley) → Overcome! \textbf{2 VP (Hayley)} 
 \end{itemize}
+}
 
 
-
-\underline{  {\LARGE Ongoing Challenges }  }
+\jumpHeadline{Ongoing Challenges }  
 
 \begin{itemize}
 \item Ongoing Challenge: The Tank → Athletics 2 (Hayley)
@@ -633,8 +621,10 @@ Oliver starts drifting off.  Just as he passes out, he thinks that she touches h
 
 
 
-\underline{  {\LARGE Tank Challenge Levels }  }
+\jumpHeadline{ Tank Challenge Levels }  
 
+{
+\parskip=0pt
 Trace: Green
 
 Nominal: Yellow
@@ -642,10 +632,10 @@ Nominal: Yellow
 Solid: Orange
 
 Synchronous: Red
+}
 
 
-
-\underline{  {\LARGE VP TOTALS }  }
+\jumpHeadline{ VP TOTALS } 
 
 Hayley 4
 
@@ -653,7 +643,7 @@ Oliver 8
 
 
 
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes }  
 
 
 \quotedDialog{
