--- a/4T/ch7.tex
+++ b/4T/ch7.tex
@@ -22,10 +22,10 @@ Also, if you want to see what people have added/changed, go to File → See Revi
 
 
 
- {\LARGE GC Station } 
+\jumpHeadline{GC Station} 
 
 
-\jumpHeadline{The Shaft }
+\sceneHeadline{The Shaft }
 
 We pick up right after the end of last session.  Jayce tells us that we want to head down the middle tunnel, and it will lead us to The Shaft \textit{{[}The Shaft: 9 Tokens enter the threat pool{]}}.
 
@@ -87,10 +87,10 @@ When she reaches the top, they untie the rope from her and Jonah fastens it to s
 
 
 
- {\LARGE SAC-01 } 
+\jumpHeadline{SAC-01 } 
 
 
-\jumpHeadline{Hallways }
+\sceneHeadline{Hallways }
 
 With the squad reassembled, we head into the corridor.  As soon as we set foot inside, the blue light changes to red and the door begins to close.  Hayley grabs the key card and Jaya grabs Hayley's backpack and hustles everyone inside.  The rope is abandoned outside.
 
@@ -127,7 +127,7 @@ The corridor opens out into a round open area with a ring of nicely appointed ro
 \textit{{[}Challenge: Figure out which rooms to search{]} } Hayley draws on her experience with Citizen's households and offices and realizes that these rooms on this floor are just secretarial or for show.  What we want is probably on a lower floor.  Oliver does not hear her and starts immediately searching the desks on this floor \textit{{[}Refresh: Focused{]}.}  Jaya also starts searching but gets frustrated and starts using her gun to blast open the locks on some of the desk drawers \textit{{[}Refresh: Small Arms{]}.} 
 
 
-\jumpHeadline{Lower Floor }
+\sceneHeadline{Lower Floor }
 
 Hayley and Jonah head down the stairs \textit{{[}Challenge: Notice the person below{]}}. Hayley notices some movement below: a person-sized figure moving in an odd manner.  She calls Jonah and Jaya's attention to it and they start heading down the stairs (Oliver is still searching the desks and has found several mysterious objects like staplers and ladies' powder compacts).  The second level has rooms with sequential numbers on them.  The third floor is a cafeteria/break area.  The fourth floor has corridors branching off.  The fifth floor has two large doors (like the ones at the front of SAC-09 and SAC-01) facing each other, and four smaller doors placed evenly on the walls between them.  
 
@@ -188,7 +188,7 @@ When the man hesitates, distracted by Hayley's pretty face, she shoots him with 
 Jaya wrestles with the woman and punches her into unconsciousness {[}Challenge: Subdue naked chick{]}.  She notices that Oliver is Not Dead YetTM and he is staggering to his feet woozily.  Jaya moves to help him stand.  She sees the the burn marks on his stomach and realizes what he had done.  They start choking on the smoke that is filling the corridor.  Oliver reaches down and starts hauling the unconscious woman out of the corridor.  Jaya helps carry the woman out into the area where Hayley and Jonah are.  Hayley tells Jaya that she shot a guy but doesn't think she killed him.  Jaya asks her to try harder next time.
 
 
-\jumpHeadline{The Archive }
+\sceneHeadline{The Archive }
 
 Behind the newly opened door there is a room with a glassed off area.  In the glassed off area there are what looks like card catalogs and a cylinder topped with a dome, with short ladders and a wheel-style lock on top.  The sections are separated by an air-lock-like small room.
 
@@ -208,10 +208,10 @@ Then Jonah and Hayley open the lock on the top of the cylinder in the room.  The
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{Challenges \& Refreshes }  
 
-
-
+{
+\parskip=0pt
 \begin{itemize}
 \item Challenge: Argh!  Bats! 2 for each of us except Hayley who got hers bumped to a 3 for Jaya's Refresh of \hl{Truncheon}\footnote{\textbf{Suko T }or was it something else?  I don't have it in my notes \textsubscript{09/05/12 1:06am}}\footnote{$\rightarrow$\textbf{Rebecca S. }Maybe Adrenaline Junkie...? \textsubscript{09/12/12 10:35pm}}\footnote{$\rightarrow$\textbf{Suko T }I don't think so because you used it in the challenge.  But there was a gleeful description of snatching bats out of the air and stomping on them and generally frenzy-ing.  Grim Visage maybe? \textsubscript{09/13/12 5:10pm}}
 \end{itemize}
@@ -260,12 +260,12 @@ Then Jonah and Hayley open the lock on the top of the cylinder in the room.  The
 \item Challenge: Shoot guy in leotard. Uniform 2 (Hayley) + Gorgeous 3 (Hayley) → Overcome! \textbf{2 VP (Hayley)}
 \item Challenge: Subdue naked chick 1.  Grim Visage 2 (Jaya) → \hl{Overcome! \textbf{1 VP (Jaya)}}\footnote{\textbf{Suko T }Is this where Jaya's second VP comes from?  Or did I miss one earlier? \textsubscript{09/05/12 3:08am}}\footnote{$\rightarrow$\textbf{Rebecca S. }D:    I know the total is 2 but I have zero memory of where I got either of them... you're notes \& guesses are better then anything my memory would fabricate.... \textsubscript{09/12/12 10:34pm}}
 \end{itemize}
+}
 
 
-
-\underline{  {\LARGE VP Totals }  }
-
-
+\jumpHeadline{VP Totals } 
+{
+\parskip=0pt
 
 Hayley: 3
 
@@ -274,10 +274,10 @@ Jaya: 2
 Jonah: 4
 
 Oliver: 3
+}
 
 
-
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes } 
 
 
 \quotedDialog{
