--- a/4T/ch8.tex
+++ b/4T/ch8.tex
@@ -18,13 +18,7 @@ Please fill in the gaps and correct errors.  Also you should always feel free to
 
 
 
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE SAC-09 } 
+\jumpHeadline{SAC-09 } 
 
 
 
@@ -55,7 +49,7 @@ Hayley wakes up as Dr. Gerhauser is speaking, but doesn't say anything once she 
 Dr. Gerhauser checks Hayley over briefly and then turns back to talking to Oliver.  Still spacy from the sedatives, Oliver asks her if she could bring him some pie.  Like his mom's pie.  She almost cracks a smile and says she will do what she can.
 
 
-\jumpHeadline{Bunker }
+\sceneHeadline{Bunker }
 
 Meanwhile, Jaya wakes up in her bunk, with no memory of how she got there.  She feels very out of it and exhausted.  She staggers out of bed and realizes that she's fully dressed and in one hand she is clutching a bottle with two pills in it. She watches as the pills slide out of the bottle and bounce across the floor toward Oliver's bed.  She stumbles after them and takes them both.  As the numbness spreads, she collapse with a sigh of relief on the edge of Oliver's bed.
 
@@ -255,7 +249,7 @@ As Oliver leaves, Agent Morgan says, ``\hl{I can see what my sister sees in you}
 
 
 
- {\LARGE Terminus } 
+\sceneHeadline{Terminus } 
 
 
 
@@ -343,7 +337,7 @@ Hayley and Jaya return to the waiting room just before Agent Morgan is excused f
 
 
 
- {\LARGE SAC-09 } 
+\sceneHeadline{ SAC-09 } 
 
 
 
@@ -365,7 +359,7 @@ Hayley returns to her physical therapy but her rhythm is off, and she ends soone
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{ Challenges \& Refreshes } 
 
 
 
@@ -376,7 +370,7 @@ Hayley returns to her physical therapy but her rhythm is off, and she ends soone
 
 
 
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes }  
 
 
 
