--- a/4T/ch9.tex
+++ b/4T/ch9.tex
@@ -23,12 +23,7 @@ Next session: THE TANK.  Yay!!!!!
 As always, please fill in the gaps and correct errors.  Also you should always feel free to add/correct the perspective of your character.
 
 
-
-\noindent\hrulefill
-
-
-
-\underline{  {\LARGE Trait Purchases }  }
+\jumpHeadline{ Trait Purchases }  
 
 
 
@@ -42,13 +37,7 @@ Hayley: Rifle 0 → 1 (may also be buying down a Flaw)
 
 VP expenditures on Character spreadsheet. We have communal points to spend!  Suggestions were for body armor. And lasers. :D
 
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE SAC-09 } 
+\jumpHeadline{ SAC-09 } 
 
 
 
@@ -260,10 +249,10 @@ She mentions that Hayley's experience was in part due to her mind already being 
 
 
 
- {\LARGE Shore Leave } 
+\jumpHeadline{ Shore Leave } 
 
 
-\jumpHeadline{Shore Leave: Hayley, part 1 }
+\sceneHeadline{Shore Leave: Hayley, part 1 }
 
 Hayley goes to visit Signe in the Warehouse district, dressed in her bodyguard uniform (a well tailored, high quality dark colored suit).  It is dusk when she arrives at the Warehouse Station.  Not being used to going anywhere by herself, she has to ask Tiburon a lot of last minute questions, such as Signe's address and how Hayley might get from this place to where Gillian lives. 
 
@@ -296,7 +285,7 @@ Hayley assures her that they are fine, and the neighbors seem nice.  Hayley tell
 Hayley thanks her for the letter, mentioning that it is the first letter she ever received.  Signe says Trenton thought it would be helpful for her to write the letter.  Hayley asks if they can continue to write to each other.  Signe agrees but grows pale and excuses herself to go vomit in the other room.  When she returns, Hayley asks her if she is feeling well, and Signe says yes.  Hayley doesn't press her further.  Hayley introduces Signe to ``this new game I just learned, 20 Questions'' and they play that through the night.  When they grow tired, Signe leads her to a bedroom with a large queen bed in the middle and a small bed tucked into an alcove.  Signe indicates that the small bed is her bed and they lie down there and go to sleep.  It does not even occur to Hayley to ask about using the other, much larger bed in the room.
 
 
-\jumpHeadline{Shore Leave: Oliver }
+\sceneHeadline{Shore Leave: Oliver }
 
 Oliver arrives in Cardoza, carrying his gun (in a nondescript backpack) but wearing civvies.  He scouts around to get the lay of the land and sticks to the shadows and tries to avoid running into people he knows.  If its unavoidable, he ends the conversation quickly and stays as vague as possible.  
 
@@ -335,7 +324,7 @@ The only things I could think of off the top of my head that would fundamentally
 Oliver leaves his father but finds Jeffries.  He asks him about the letter and who delivered it.  Jeffries says that one of the maids received it and Oliver goes to speak with her.  She said that it was left in the post box, the one in the foyer.  She thinks that the courier that Mr. Langdon usually uses, brought it by.
 
 
-\jumpHeadline{Shore Leave: Hayley, part 2 }
+\sceneHeadline{Shore Leave: Hayley, part 2 }
 
 Signe brings Hayley breakfast (gel pack) in bed.  Hayley says that she slept well but overslept because she isn't used to the light here.  Hayley can't stay but is happy that she could come to visit.  Signe says she is glad she came too.  
 
@@ -373,10 +362,10 @@ Hayley then mentions learning to swim and that Constable Langdon, Oliver, is tea
 
 
 
- {\LARGE SAC-09 } 
+\jumpHeadline{ SAC-09 } 
 
 
-\jumpHeadline{Jonah and Trenton }
+\sceneHeadline{Jonah and Trenton }
 
 Jonah goes to meet with Trenton.  He heads down to Trenton's lab.  The place is empty and Trenton walks in with a bottle in hand.  Jonah thanks Trenton for finding us and asks if he found out what he wanted to know from the slides.  Trenton says that while the facilities here are wondrous, they leave something to be desired.  Jonah, looking around at tech that is already far beyond his experience, wonders what else one could want.
 
@@ -400,10 +389,10 @@ http://eureka.wikia.com/wiki/Zane\_Donovan \textsubscript{11/28/12 2:20pm}}.
 
 
 
- {\LARGE Shore Leave } 
+\jumpHeadline{ Shore Leave } 
 
 
-\jumpHeadline{Shore Leave: Oliver, part 2 }
+\sceneHeadline{Shore Leave: Oliver, part 2 }
 
 Oliver tracks down the courier and makes it clear that he is not here on his father's business and that this needs to be discreet.  The courier remembers the letter because it was weird. It was actually sent straight to the courier office, and then inside that envelope was the letter to Oliver, with instructions on delivery.  Since the bill of receipt was good, they went ahead and delivered it.
 
@@ -421,7 +410,7 @@ Oliver tries to follow Lackovich but feels too exposed to search outside.  He ge
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{ Challenges \& Refreshes }  
 
 
 
@@ -431,7 +420,7 @@ Oliver tries to follow Lackovich but feels too exposed to search outside.  He ge
 
 
 
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes }  
 
 
 
