--- a/4T/book1.ltx
+++ b/4T/book1.ltx
@@ -1,5 +1,8 @@
 
 \documentclass[10pt]{book}
+%\usepackage{pgfpages}
+%\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
+
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{scrextend}
@@ -14,11 +17,14 @@
 \usepackage{geometry}
 \geometry{
  a5paper,
- bottom=20mm,
- left=10mm,
- right=10mm,
+ % due to the folded nature of my printouts, and the failure to scale the paper correctly
+ % the bottom and non-bound margins have extra space. The top and the bound margin
+ % are expected to be the specified offsets here.
+ bottom=2mm,
+ left=2mm,
+ right=2mm,
  top=20mm,
- bindingoffset=2cm,
+ bindingoffset=15mm,
 }
 \usepackage{fancyhdr}
 \fancypagestyle{mainmatter}{
@@ -83,9 +89,7 @@
 \renewcommand{\contentsname}{Session}
 \begin{document}
 
-\pagenumbering{gobble}
 \include{book1_intro}
-\pagenumbering{arabic}
 \tableofcontents
 
 \pagestyle{mainmatter}
