--- a/4T/book1_intro.tex
+++ b/4T/book1_intro.tex
@@ -1,3 +1,4 @@
+\pagenumbering{gobble}
 \begin{center}
 ~
 \vskip 10em
@@ -6,8 +7,10 @@
 - Nathaniel Ford 5/10/12
 \end{center}
 
+\setcounter{page}{1}
 \pagebreak
-
+\pagenumbering{roman}
+\setcounter{page}{2}
 
 \jumpHeadline{Adam}
 \textbf{Character:} Oliver Langdon\\
@@ -26,7 +29,7 @@ When in the company of his peers outside of the Authority, Oliver's posture, out
 \textbf{Class: }National (Franchise)	\\
 \textbf{Serial Number:} 4018675308	
 
-`` Dark, mid-length wavy hair, dark eyes.  Usually with a small amount of stubble, neither well-shaven (the mark of the wealthy) nor so long as to be unkempt.  Average height, fairly fit.  He dresses practically, the uniform of the TA being joined by the packs and pragmatic satchels of a street medic.  Jonah appears to be relaxed most of the time, with a cheerful but mild attitude, and a small but constant smile.  That other people tend to see him as friendly but not terribly notable, is a testament to his nearly constant attention to maintain this demeanor at all costs.  The facade rarely cracks.  When it does the tension in his eyes that flickers into view is momentary and so out of place it is easily dismissed.''
+``Dark, mid-length wavy hair, dark eyes.  Usually with a small amount of stubble, neither well-shaven (the mark of the wealthy) nor so long as to be unkempt.  Average height, fairly fit.  He dresses practically, the uniform of the TA being joined by the packs and pragmatic satchels of a street medic.  Jonah appears to be relaxed most of the time, with a cheerful but mild attitude, and a small but constant smile.  That other people tend to see him as friendly but not terribly notable, is a testament to his nearly constant attention to maintain this demeanor at all costs.  The facade rarely cracks.  When it does the tension in his eyes that flickers into view is momentary and so out of place it is easily dismissed.''
  
  \pagebreak
  \jumpHeadline{Rebecca}
@@ -45,3 +48,7 @@ When in the company of his peers outside of the Authority, Oliver's posture, out
 \textbf{Serial Number:} 2460124601	
 
 ``Appears to be in her late teens at first glance, but is probably in her early 20?s [actual age 23]. Stunningly good looking, Hayley has huge pale blue-grey eyes, a flawless golden complexion and absolutely symmetrical features. Her glossy black hair is cut in a practical short cropped style that only serves to emphasize her elegant bone structure. Her figure is tall, leggy and nicely proportioned. She looks healthy, and only slightly less nourished and well fed than a Citizen. Certainly better than most Indentured. She is toned and fit, and moves gracefully like a dancer. She has excellent posture, always. You have never seen her slouch or sprawl. For those who notice such things, she does not act like someone who is really aware of how their appearance impacts other people. She certainly does not purposely solicit that type of attention.''
+
+\pagebreak
+\pagenumbering{arabic}
+\setcounter{page}{4}
