More chapter cleanup

--- a/4T/ch11.tex
+++ b/4T/ch11.tex
@@ -15,26 +15,16 @@ Jaya's Worst Week Ever (again).
 
 As always, p\hl{lease fill in the gaps and correct errors}\footnote{\textbf{Suko T }Thanks for all the edits/additions Rebecca and Ion!  I love having these be a collaborative documents and getting Jonah and Jaya's perspective too.  Re-reading these later is going to be awesome.  :) \textsubscript{11/30/12 2:46pm}}.  Also you should always feel free to add/correct the perspective of your character.
 
-\noindent\hrulefill
-
-
-
- {\LARGE Capability purchases } 
+\jumpHeadline{ Capability purchases } 
 
 Jaya: \textit{Stash: 1 → 2} and \textit{Senior Constable: 1 → 2}
 
 Hayley: Reduce Flaw: Follower: \textit{1{[}2{]} → 0{[}3{]}}, Reduce Flaw: Fear: \textit{2{[}0{]} → 1{[}1{]}} (via Capability expenditure)
 
-\noindent\hrulefill
+\jumpHeadline{ SAC-09 } 
 
 
-
-
-
- {\LARGE SAC-09 } 
-
-
-\jumpHeadline{Jaya's New Assignment }
+\sceneHeadline{Jaya's New Assignment }
 
 Jaya is called in to speak with Agent Morgan in Ops.  Agent Rook and Tech Larissa are there.  Rook is sitting near the tanks, across the table from Morgan.
 
@@ -96,10 +86,7 @@ At the end of the week, Jaya gets a note to return to the post and a note from M
 
 
 
- {\LARGE Shore Leave } 
-
-
-\jumpHeadline{Shore Leave: Jaya }
+\sceneHeadline{Shore Leave: Jaya }
 
 Jaya goes home to play the game of ``whose life is harder'' with her sister.  Jaya walks into LA Ink unannounced and declares FML.
 
@@ -125,10 +112,7 @@ She nearly misses her pickup train and when she finally does make it to the trai
 
 
 
- {\LARGE SAC-09 } 
-
-
-\jumpHeadline{SAC-09: Jonah }
+\sceneHeadline{SAC-09: Jonah }
 
 Jari comes to find Jonah and tells him that Dr. Gerhauser would like to see him.  Jonah looks up from the book he is studying and asks Jari, ``How does she remember all of this?''  Jari doesn't know but says, ``She's been doing it a long time.''
 
@@ -250,10 +234,7 @@ Removing the cap, Dr. Gerhauser says, ``That will be all for now.  Do you want t
 
 
 
- {\LARGE Shore Leave } 
-
-
-\jumpHeadline{Shore Leave: Jonah }
+\sceneHeadline{Shore Leave: Jonah }
 
 Jonah arranges to send a \hl{klipspringer}\footnote{\textbf{q.google }http://www.ultimateungulate.com/artiodactyla/oreotragus\_oreotragus.html
 
@@ -277,10 +258,7 @@ Jonah heads back to his National quarters.  While there he sends an anonymous me
 
 
 
- {\LARGE SAC-09 } 
-
-
-\jumpHeadline{SAC-09: Jonah }
+\sceneHeadline{SAC-09: Jonah }
 
 Jonah barely has time to set his stuff down by his bunk when Jari comes by again and says that Dr. Gerhauser wants to see him.  He says that Jonah can find his way to Medbay by himself now and should have access.  When Jonah gets to the MedBay and opens the previously off limits door with his badge, he permits himself a smile.
 
@@ -378,7 +356,7 @@ Dr. Gerhauser picks up a device and scans Jonah and seems pleased. She takes his
 Jonah asks when he is going in the Tank.  Dr. Gerhauser doesn't know, ``the scheduling is a bit dodgy right now.''
 
 
-\jumpHeadline{SAC-09: Jaya and Jonah }
+\sceneHeadline{SAC-09: Jaya and Jonah }
 
 When her train gets to SAC-09, Jaya is barely holding it together and has propped herself up against the train door.  Agent Tiburon Rook diplomatically asks if Jaya would like to clean herself up first before reporting to the doctor, since anything the doctor notes would be reported to Agent Morgan.  He even offers to help her to her bunk. Jaya asks if Lackovich is around, and when she hears that Lackovich is still away from the base, she says she'll get there herself.  Tiburon asks if she's been having a problem with Lackovich, but Jaya says that Lackovich is just being a bitch and she'll handle it.  
 
@@ -425,7 +403,7 @@ As Jaya winds down, Jonah asks her about the Tank.  Jaya is raring to go. ``You 
 Jonah knocks her out with some meds in the medkit and examines her.  He takes very careful note of her injuries without actually treating or even touching them if at all possible.  She's actually fairly uninjured, most of the blood is not hers.  She is bruised all over.  Her nose isn't actually broken, but it was only barely healed from the time when she did break it, so it's pretty bruised up.  Jonah notices that she has a new badge pinned to her uniform - a green badge with seven sides of irregular length.  Jonah takes scrutinizes the badge, until he can picture it clearly without looking at it.
 
 
-\jumpHeadline{Jonah }
+\sceneHeadline{Jonah }
 
 Jonah leaves Jaya passed out in Oliver's bed and goes to find Jari.  He asks to see Hayley and Oliver and is told they are sleeping.  He goes to see them anyway and is relieved to see that they are just sleeping- no tubes sticking in them or anything (although there are monitors nearby).  Hayley stirs in her sleep and that reassures him further.
 
@@ -450,7 +428,7 @@ Jonah asks Swan, ``Are you a doctor?''
 ``It took a lot of practicum over the years.'' Jonah brings up the book he's been studying, and they talk about it a bit.  Swan gives Jonah a mnemonic to help him remember some of the trickier parts, and offers to help him study.
 
 
-\jumpHeadline{Jaya }
+\sceneHeadline{Jaya }
 
 Jaya wakes up the next morning and heads down to Medbay.  Dr. Gerhauser is not there, so Jaya starts poking around and looking in cabinets.
 
@@ -574,7 +552,7 @@ Dr. Gerhauser finishes and tells Jaya to stay away from medications and alcohol.
 Jaya takes the elevator back up to her bunk but the elevator stops midway and Micah and another guard (in full armor) grab her and haul her to a section of SAC-09 that we have not been before. They frisk her and lock her in a room.  Jaya yells that they better not be stealing her shit!  She's particularly anxious about her restocked tin of ``stuff''.
 
 
-\jumpHeadline{Jonah }
+\sceneHeadline{Jonah }
 
 Tiburon Rook comes into the bunk and tells Jonah that, ``Your Senior Constable will be staying somewhere else tonight.  She may be a little...miffed when she returns, and I just wanted to give you a heads up about that.'' Jonah t\hl{hanks him for the warning}\footnote{\textbf{q.google }What's actually going on his head is a combination of sarcasm (Really?  You think she'll be ``miffed''?), and intrigue that Rook has apparently come to give him a heads up on anything. \textsubscript{11/30/12 2:16pm}}\footnote{$\rightarrow$\textbf{Suko T }Yeah, he's been awfully nice to us this whole time, and getting nicer every session.  Maybe we should actually, like, talk to him or something. :D \textsubscript{11/30/12 4:34pm}}.  Tiburon asks very nicely if Jonah could clean up the puddle of vomit that Jaya left.  Jonah gives him a non-plussed look, and apparently changes the subject, asking Rook if he knows where Jaya was stationed.
 
@@ -585,7 +563,7 @@ Tiburon Rook comes into the bunk and tells Jonah that, ``Your Senior Constable w
 Tiburon nods and leaves, asking Jonah once more if he could clean up the room somewhat.  Jonah says he'll take care of it.
 
 
-\jumpHeadline{Jaya }
+\sceneHeadline{Jaya }
 
 In the morning, Morgan shows up to the doorway of Jaya's cell.  Jaya gets to her feet but the fight has been taken out of her.
 
@@ -608,7 +586,7 @@ Morgan shuts the door, and Jaya plasters herself to the window in the door, look
 A little while later, Tiburon comes to retrieve her.  Jaya tries to sneakily get her letter back and Tiburon actually calls her on it and tells her not to lie to him.  Or at least don't be so bad at it.  Jaya says that the letter is a letter of commendation for her that Morgan threw into the hallway and Micah picked it up.  Tiburon says he'll look into it and getting her ``shit'' back. 
 
 
-\jumpHeadline{Jaya, Jonah and Hayley }
+\sceneHeadline{Jaya, Jonah and Hayley }
 
 Jaya returns to the bunk and Jonah is there, reading.  Jaya complains that her shitty week has continued.  In the middle of her rant about the terrible trainees she was given and how much she missed her team, Hayley knocks on the door and then walks into the room.  ``Hayley!'' exclaims Jaya and she jumps up and gives Hayley a big hug.  Hayley freezes and throws a wide eyed look at Jonah.  He can tell she looks very uncomfortable even a little panicky, but Jaya doesn't notice.
 
@@ -682,11 +660,7 @@ Dr. Gerhauser, Swan and Micah are in the room.  \hl{Jonah and Jaya are prepped f
 
 
 
- {\LARGE Challenges \& Refreshes } 
-
-
-
-\underline{  {\LARGE Ongoing Challenges }  }
+\jumpHeadline{ Ongoing Challenges }  
 
 \begin{itemize}
 \item Ongoing Challenge: The Tank → Senior Constable 2 (Jaya)
@@ -694,7 +668,7 @@ Dr. Gerhauser, Swan and Micah are in the room.  \hl{Jonah and Jaya are prepped f
 
 
 
- {\LARGE Quotes } 
+\jumpHeadline{ Quotes } 
 
 
 \quotedDialog{
