--- a/4T/ch12.tex
+++ b/4T/ch12.tex
@@ -17,17 +17,10 @@ Wherein Jaya's squad is very mean to her and she does a lot of \hl{``strategic r
 As always, please fill in the gaps and correct errors.  Also you should always feel free to add/correct the perspective of your character.
 
 
-
-\noindent\hrulefill
-
+\jumpHeadline{ THE TANK } 
 
 
-
-
- {\LARGE THE TANK } 
-
-
-\jumpHeadline{THE TANK: Jonah }
+\sceneHeadline{THE TANK: Jonah }
 
 The liquid in the tank does not feel like water. \hl{For perhaps the first time in his life}\footnote{\textbf{Suko T }My assumption \textsubscript{12/07/12 3:13pm}}\footnote{$\rightarrow$\textbf{q.google }I think that's correct.  I definitely don't think he could wrap his head around the idea that Oliver was \_actually\_ swimming. \textsubscript{12/07/12 11:34pm}}, Jonah is completely submerged in liquid.  Even though he is wearing the mask, it is hard not to freak out a little, especially as he can vaguely see Dr. Gerhauser and Technician Swan watching him through the walls of the tank.  
 
@@ -148,7 +141,7 @@ The same voice says, ``Look out behind you!''  Jonah turns, there is a flash of 
 \textit{\textbf{{[}0 tokens left on Nominal for Jonah, hasn't started Solid yet{]}}}
 
 
-\jumpHeadline{THE TANK: Jaya }
+\sceneHeadline{THE TANK: Jaya }
 
 Because of Jaya's drug tolerance, it takes a while for her to conk out.  She spends most of the time making awkward eye contact with Dr. Gerhauser and Swan and anyone else staring at her in the Tank.  But then she blinks and she's walking into a bar.
 
@@ -274,10 +267,7 @@ The gang continues to give her shit, including Haley who has somehow shown up.  
 
 
 
- {\LARGE SAC-09 } 
-
-
-\jumpHeadline{Jaya and Jonah }
+\sceneHeadline{SAC-09: Jaya and Jonah }
 
 Jaya wakes up in Medbay feeling very weak.  She rolls out of the bed and falls onto the floor, ripping out her IV.  The huge crash and thud wakes up Jonah who is in the next bed over.
 
@@ -334,7 +324,7 @@ Jaya demands to see her squad.  She tries to order Dr. Gerhauser to summon her t
 Dr. Gerhauser says that she will ask if Jaya's team will come down and see Jaya, but she won't order them to do so.
 
 
-\jumpHeadline{Oliver and Hayley (and later Jonah) }
+\sceneHeadline{Oliver and Hayley (and later Jonah) }
 
 Oliver wakes up and returns to his bunk.  Hayley is there and she greets him with a smile.  ``Welcome back!  I changed your bed, it was....soggy.''
 
@@ -382,10 +372,10 @@ Midway through the night, they can hear Oliver tossing and turning as his sleep 
 
 
 
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\jumpHeadline{ Challenges \& Refreshes }  
 
-
-
+{
+\parskip=0pt
 \begin{itemize}
 \item Challenge: Get the other medic to stay until the injured man is rebandaged 2.  Street Medic 2 (Jonah) → Matched
 \item Challenge: Convince the woman to let them leave 2.  Social Chameleon 3 → Overcome! \textbf{2 VP (Jonah)}
@@ -426,9 +416,9 @@ Midway through the night, they can hear Oliver tossing and turning as his sleep 
 \item Refresh: Senior Constable (Jaya)
 \end{itemize}
 
+}
 
-
-\underline{  {\LARGE Ongoing Challenges }  }
+\jumpHeadline{Ongoing Challenges }  
 
 \begin{itemize}
 \item \hl{(}\footnote{\textbf{Suko T }Is this right?  Or was this just mentioned as a possible thing to throw at when it gets refreshed?  I didn't know if you had it to use or not. \textsubscript{12/07/12 11:17pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }I was thinking about it (although really it would have been from last session, unless I play out further ramifications).
@@ -438,8 +428,9 @@ Also, Hardened is a 3 these days. O\_o \textsubscript{12/09/12 9:52am}}\footnote
 
 
 
-\underline{  {\LARGE Tank Challenge Levels }  }
-
+\jumpHeadline{Tank Challenge Levels } 
+{
+\parskip=0pt
 Trace: Green
 
 Nominal: Yellow
@@ -447,10 +438,10 @@ Nominal: Yellow
 Solid: Orange
 
 Synchronous: Red
+}
 
 
-
-\underline{  {\LARGE VP TOTALS }  }
+\jumpHeadline{VP TOTALS }  
 
 Jaya: 2
 
@@ -458,7 +449,7 @@ Jonah: 9
 
 
 
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{Quotes }  
 
 
 
