--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -14,15 +14,9 @@ Words were said.  Many many words.  Some of them were even quite nice.  Some dec
 
 
 
-\noindent\hrulefill
+\jumpHeadline{SAC-09  {[}9 Backlash Tokens{]}}
 
-
-
-
-\jumpHeadline{Backlash }
-\sceneHeadline{SAC-09  {[}9 Backlash Tokens{]}}
-
-\textbf{Jaya and Morgan}
+\sceneHeadline{Jaya and Morgan}
 
 
 
@@ -580,7 +574,7 @@ Oliver pauses, looks at Hayley and says, ``I'll try to help you with that.''
 
 
 
-\underline{  {\LARGE Shore Leave }  }
+\jumpHeadline{Shore Leave }  
 
 
 \sceneHeadline{Shore Leave: Jonah and Dr. Gerhauser}
@@ -749,9 +743,9 @@ Octavia pauses and turns back to look at Hayley briefly but then turns away and 
 Hayley looks around the empty apartment sadly.  She carefully stows the duffle bag in one of the closets and then lets herself out, locking the door behind her.
 
 
-\sceneHeadline{Backlash Token Pool: 0}
+\textbf{Backlash Token Pool: 0}
 
-\underline{  {\LARGE Ongoing Challenges }  }
+\jumpHeadline{Ongoing Challenges }  
 
 \begin{itemize}
 \item Ongoing Challenge: The Gerhauser Sisters 
