--- a/4T/ch20.tex
+++ b/4T/ch20.tex
@@ -22,12 +22,8 @@ NOTE \#2: The last few scenes (post-instrumentation) are going to be really patc
 
 
 
-\noindent\hrulefill
 
-
-
-
-\sceneHeadline{SAC-09}
+\jumpHeadline{SAC-09}
 
 After meeting up with Octavia, Hayley goes to see Signe and gains a lot of emotional equilibrium back.  Jonah goes to investigate into his sister's new boyfriend.  Oliver and Jaya are the first to return to the base.
 
@@ -79,9 +75,9 @@ Morgan continues, ``You may know him as the Orc of Anglia.  He is considered arm
 
 ``Does this mean you're authorizing lethal force?'' asks Jaya.
 
-REBECCAxxBEGINxxHIGHLIGHTxxDr. Gerhauser replies, ``We'd prefer capture.''
+\hl{Dr. Gerhauser replies, ``We'd prefer capture.''
 
-Simultaneously, Morgan replies, ``Yes.''xxENDxxHIGHLIGHT\footnote{\textbf{Adam Kenney }+1 \textsubscript{05/21/13 8:25pm}}
+Simultaneously, Morgan replies, ``Yes.''}\footnote{\textbf{Adam Kenney }+1 \textsubscript{05/21/13 8:25pm}}
 
 ``What does the Orc do for Anglia?'' asks Jonah.
 
@@ -632,6 +628,8 @@ Hayley grabs her uniform and won't let her do it.  Jaya looks annoyed at Hayley 
 
 \jumpHeadline{Borrough Station Threat Levels }
 
+{
+\parskip=0pt
 Upper Deck: Green
 
 The Apartment Tower: Green
@@ -641,13 +639,14 @@ The Yard: Yellow
 The Factory: Orange
 
 The Vengeance of Octavian: Red
+}
 
 
-
-\underline{  {\LARGE Challenges \& Refreshes }  }
-
+\jumpHeadline{Challenges \& Refreshes }  
 
 
+{
+\parskip=0pt
 \begin{itemize}
 \item Challenge: Find unusual entries in record books 2.  Nose for Breadcrumbs 2 (Hayley) → Matched
 \item Challenge: Get a Native Guide 2.  Air of Command 2 (Jaya) → Matched
@@ -656,15 +655,17 @@ The Vengeance of Octavian: Red
 \item Challenge: Figure out who came through 1.  Forensics 2 (Jonah) → Overcome! \textbf{1 VP (Jonah)}
 \item Challenge: Notice 1.  Binoculars 2 (Oliver) → Overcome! \textbf{1 VP (Oliver)}
 \end{itemize}
+}
 
 
+\jumpHeadline{VP TOTALS }  
 
-\underline{  {\LARGE VP TOTALS }  }
-
+{
+\parskip=0pt
 Jonah: 1
 
 Oliver: 1
-
+}
 
 \jumpHeadline{Quotes }
 
